--- a/views/list.ejs
+++ b/views/list.ejs
@@ -2,20 +2,16 @@
 
     <body>
         <div class="container">
-            <h5>
-                <%=hindi%>
+            <h5 id="hindi_date">
             </h5>
-            <h5>
-                <%=today%>
+            <h5 id="english_date">
             </h5>
             <br>
             <form action="/" method="post">
                 <div class="mb-3">
-                    <!-- <label for="text" class="form-label"> -->
                     <h4>
                         <%= listTitle %>&nbsptasks:
                     </h4>
-                    <!-- </label> -->
                     <input type="text" name="text" class="form-control" placeholder="Add task here" autofocus
                         required></input>
 
