--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -1,3 +1,10 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
+<script>
+    const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+    const eng=(new Date()).toLocaleDateString("en-US", options);
+    const hindi=(new Date()).toLocaleDateString("hi-IN", options);
+    document.getElementById('hindi_date').innerHTML=hindi;
+    document.getElementById('english_date').innerHTML=eng;
+</script>
